# Inf_Project

./: Parser.txt  README.md  ideas Alex
Parser/: CMakeLists.txt  Output.txt  main.cpp
Parser/Files/: Input_test_lexer.txt  Output.txt  Plan.txt
Parser/Headers/: AbstractSyntaxTree.h  Defines.h  Lexer.h  Parser.h  Source.h  debug.h
Parser/Source/: AbstractSyntaxTree.cpp  Lexer.cpp  Parser.cpp  Source.cpp
lexser/: main.cpp
